# git-diff-tester

./: README.md  pyproject.toml
git_diff_tester/: trigger.py
tests/: test_git_diff_tester.py
